--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="root"></div>
-    <script src="./app/startup/app-startup.tsx"></script>
+    <script src="./app-startup.tsx"></script>
 </body>
 
 </html>
